Fixing z-index so that the highlighter does not show components over the devtools themselves

--- a/src/features/devtools/components/OpenDevToolsButton/OpenDevToolsButton.module.css
+++ b/src/features/devtools/components/OpenDevToolsButton/OpenDevToolsButton.module.css
@@ -1,5 +1,5 @@
 .devToolsButton {
-  z-index: 1000;
+  z-index: 10000;
   position: fixed;
   padding: 10px 0 10px 10px;
   bottom: 20px;
